--- a/style.css
+++ b/style.css
@@ -1,1 +1,66 @@
+.jumbotron {
+  background-color: #48494b;
+  padding-top: 100px;
+  background-image: url(./img/DnE.JPG);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 0 -100px;
+  background-repeat: repeat-x;
+}
 
+.jumbotron h1,
+.jumbotron p {
+  text-shadow: 2px 2px 5px black;
+}
+
+.jumbotron svg {
+  overflow: hidden;
+}
+
+.rounded-circle {
+  box-shadow: 2px 2px 5px black;
+}
+
+.about {
+  background-color: #ffd700;
+  padding-top: 60px;
+}
+
+.about .pLeft,
+.about .pRight {
+  opacity: 0;
+  transform: translate(-50px, 0) rotate(15deg);
+  transition: 1s;
+}
+
+.about .pRight {
+  transform: translate(50px, 0) rotate(-15deg);
+}
+
+.about .pLeft.show,
+.about .pRight.show {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+.projects {
+  background-color: #48494b;
+  color: white;
+  padding-top: 60px;
+}
+
+.contact {
+  background-color: #ffd700;
+  padding-top: 60px;
+}
+
+.projects .card {
+  opacity: 0;
+  transform: translate(0, -45%);
+  transition: 1s;
+}
+
+.projects .card.show {
+  opacity: 1;
+  transform: translate(0, 0);
+}
